feat: Add @babel/preset-typescript to resolve ts transpile for a moment
1. in the near future, it'll be changed into @parcel/transformer-typescript-tsc
   to use .tsconfig.json and to use tsc

--- a/src/component/button/_Button.scss
+++ b/src/component/button/_Button.scss
@@ -4,6 +4,7 @@
   width: #{$width}px;
   height: #{$height}px;
   background-color: $color;
+  color: #fff;
   border: 1px solid #000;
 
   @content;
