--- a/src/entry.scss
+++ b/src/entry.scss
@@ -1,4 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap");
+
 .root {
+  margin: 0;
+  padding: 0;
+  font: {
+    family: "Noto", sans-serif;
+  }
   width: 100vw;
   height: 100vh;
+
+  overflow: auto;
 }
