feat: Add button hover animation, color palette

--- a/src/common/_ColorScheme.scss
+++ b/src/common/_ColorScheme.scss
@@ -1,4 +1,9 @@
-$color-primary: #0008DD;
-$color-alt: #ccc;
-$color-warning: #A06A00;
-$color-danger: #AA0000;
+$color-primary: #c77aff;
+$color-alt: #4a7444;
+$color-warning: #ffcb8f;
+$color-danger: #fd9494;
+
+$color-nav: #caffb9;
+
+$color-selected: #5900ff;
+$color-normal: #bbb;
