--- a/src/component/button/_Button.scss
+++ b/src/component/button/_Button.scss
@@ -1,4 +1,5 @@
 @import "../../common/ColorScheme";
+@import "../../common/BoxShadow";
 
 @mixin make-btn($width: 100, $height: 40, $color: $color-primary) {
   width: #{$width}px;
@@ -8,7 +9,7 @@
 
   border-radius: 5px;
 
-  box-shadow: 2px 6px 5px 0px #d3d3d3;
+  @include make-box-shadow();
 
   display: flex;
   align-items: center;
@@ -70,7 +71,7 @@
   }
 
   & span:after {
-    content: "\00bb";    
+    content: "\00bb";
     position: absolute;
     opacity: 0;
     top: 0;
