feat: Add document, draft added.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap");
 
+// init
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .root {
   margin: 0;
   padding: 0;
