--- a/src/component/menu/menu-bar/_MenuBar.scss
+++ b/src/component/menu/menu-bar/_MenuBar.scss
@@ -1,4 +1,23 @@
+@import "../../../common/ColorScheme";
 
 .menu-bar {
-  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 50px;
+  height: 100%;
+
+  border-radius: 15px;
+  background-color: #eee;
+
+  & i {
+    padding: 3px;
+    margin: 10px 0;
+    color: $color-primary;
+  }
+
+  // & .separator-vertical {
+  //   padding-bottom: 15px;
+  // }
 }
