feat: Add MenuBar animation

--- a/src/component/menu/_Menu.scss
+++ b/src/component/menu/_Menu.scss
@@ -1,6 +1,8 @@
 @import "../../common/ColorScheme";
 
 .menu {
+  width: 30px;
+  height: 100%;
 }
 
 .menu {
@@ -11,3 +13,4 @@
     background-color: $color-black;
   }
 }
+
