--- a/src/component/nav/_Nav.scss
+++ b/src/component/nav/_Nav.scss
@@ -3,8 +3,10 @@
 
 @mixin nav-common {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  width: 100vw;
+  height: 15vh;
 
   @content;
 }
@@ -12,17 +14,23 @@
 .nav {
   position: relative;
   display: flex;
+  width: 100vw;
+  height: 15vh;
+  background-color: $color-nav;
+  border: 1px dashed #eee;
 
   &-landing {
     @include nav-common {
       position: absolute;
     }
+    justify-content: flex-end;
   }
 
   &-signIn {
     @include nav-common {
       position: absolute;
     }
+    height: 30vh;
     justify-content: space-around;
   }
 
@@ -30,5 +38,6 @@
     @include nav-common;
     // TODO: Locate Icons randomly within the range of
     // square + mask
+    justify-content: flex-end;
   }
 }
