--- a/front/src/common/_ColorScheme.scss
+++ b/front/src/common/_ColorScheme.scss
@@ -1,17 +1,16 @@
 // general
-$color-box-shadow: #d3d3d3;
+$color-box-shadow: #706e6e;
 $color-black: #000;
 
 // scheme colors
-$color-primary: #c77aff;
-$color-alt: #4a7444;
-$color-warning: #ffcb8f;
-$color-danger: #fd9494;
+$color-primary: #9436d8;
+$color-alt: #336b51;
+$color-warning: #ffa640;
+$color-danger: #ff3232;
 
 // nav
-$color-nav: #caffb9;
+$color-nav: #97e0d9;
 
 // keyword
 $color-selected: #5900ff;
 $color-not-selected: #bbb;
-
