feat: Add Nav designs, separator props to adjust the size

--- a/src/common/_ColorScheme.scss
+++ b/src/common/_ColorScheme.scss
@@ -10,7 +10,7 @@ $color-danger: #ff3232;
 
 // nav
 $color-nav: #97e0d9;
-$color-footer: #80918f;
+$color-footer: #535353;
 
 // keyword
 $color-selected: #5900ff;
