--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap");
 
 // init
-body {
+body p h1 h2 h3 div span {
   margin: 0;
   padding: 0;
 }
@@ -15,5 +15,5 @@ body {
   width: 100vw;
   height: 100vh;
 
-  overflow: auto;
+  // overflow: auto;
 }
