feat: Add redirect feature to <Nav />, routing is wip

--- a/src/component/button/_Button.scss
+++ b/src/component/button/_Button.scss
@@ -24,6 +24,11 @@
 .btn {
   margin: 5px;
 
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
+
   /*
   * by size
   */
@@ -66,12 +71,14 @@
 }
 
 .btn {
+  & a
   & span {
     display: inline-block;
     position: relative;
     transition: 0.5s;
   }
 
+  & a:after
   & span:after {
     content: "\00bb";
     position: absolute;
@@ -81,11 +88,13 @@
     transition: 0.5s;
   }
 
+  &:hover a
   &:hover span {
     padding-right: 15px;
     transition: 0.5s;
   }
 
+  &:hover a:after 
   &:hover span:after {
     opacity: 1;
     right: 0;
