feat: Add nav and hightlight button feature for all pages

--- a/src/component/nav/_Nav.scss
+++ b/src/component/nav/_Nav.scss
@@ -24,6 +24,10 @@
       position: absolute;
     }
     justify-content: flex-end;
+
+    & .btn {
+      margin-right: 5%;
+    }
   }
 
   &-signIn {
