--- a/src/component/button/_Button.scss
+++ b/src/component/button/_Button.scss
@@ -1,7 +1,7 @@
 @import "../../common/ColorScheme";
 @import "../../common/BoxShadow";
 
-@mixin make-btn($width: 100, $height: 40, $color: $color-primary) {
+@mixin make-btn($width: 100, $height: 40, $color: $color-alt) {
   width: #{$width}px;
   height: #{$height}px;
   background-color: $color;
@@ -27,6 +27,10 @@
   a {
     color: #fff;
     text-decoration: none;
+  }
+
+  &.highlight {
+    background-color: $color-primary !important;
   }
 
   /*
@@ -71,15 +75,13 @@
 }
 
 .btn {
-  & a
-  & span {
+  & a & span {
     display: inline-block;
     position: relative;
     transition: 0.5s;
   }
 
-  & a:after
-  & span:after {
+  & a:after & span:after {
     content: "\00bb";
     position: absolute;
     opacity: 0;
@@ -88,14 +90,12 @@
     transition: 0.5s;
   }
 
-  &:hover a
-  &:hover span {
+  &:hover a &:hover span {
     padding-right: 15px;
     transition: 0.5s;
   }
 
-  &:hover a:after 
-  &:hover span:after {
+  &:hover a:after &:hover span:after {
     opacity: 1;
     right: 0;
     transition: 0.5s;
