--- a/src/page/landing/landing-info-item/_LandingInfoItem.scss
+++ b/src/page/landing/landing-info-item/_LandingInfoItem.scss
@@ -1,5 +1,5 @@
 .landing-info-items {
-  height: 85vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   // padding: 25px;
@@ -33,25 +33,24 @@
   }
 
   .keywords {
-    width: 330px;
-    height: 100px;
+    // width: 330px;
+    // height: 100px;
 
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
+    flex-wrap: wrap;
 
     border: 3px solid #f1f1f1;
-    border-radius: 50px;
+    border-radius: 15%;
     box-sizing: border-box;
-    padding: {
-      top: 25px;
-      left: 25px;
-    }
 
     div {
       border: 2px solid #b2b2b2;
-      margin-right: 15px;
+      padding: 5px 7px;
+      // margin-right: 15px;
+      margin: 5px 15px;
       border-radius: 10px;
     }
   }
@@ -59,7 +58,7 @@
   .logos {
     display: flex;
     flex-direction: row;
-    
+
     img {
       display: flex;
       justify-content: center;
