--- a/src/component/button/_Button.scss
+++ b/src/component/button/_Button.scss
@@ -75,13 +75,13 @@
 }
 
 .btn {
-  & a & span {
+  span {
     display: inline-block;
     position: relative;
     transition: 0.5s;
   }
 
-  & a:after & span:after {
+  span:after {
     content: "\00bb";
     position: absolute;
     opacity: 0;
@@ -90,12 +90,12 @@
     transition: 0.5s;
   }
 
-  &:hover a &:hover span {
+  &:hover span {
     padding-right: 15px;
     transition: 0.5s;
   }
 
-  &:hover a:after &:hover span:after {
+  &:hover span:after {
     opacity: 1;
     right: 0;
     transition: 0.5s;
