--- a/src/page/main/Image-carousel/_ImageCarousel.scss
+++ b/src/page/main/Image-carousel/_ImageCarousel.scss
@@ -1,9 +1,20 @@
 .imageCarousel {
-  width: 100%;
-  height: 100%;
-  
+  position: relative;
+  left: 0;
+  top: 0;
+  height: 80%;
+  overflow: auto;
+
   &--image {
     width: 100%;
     height: 100%;
+  }
+
+  &-indicator {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
   }
 }
