--- a/src/page/main/_Main.scss
+++ b/src/page/main/_Main.scss
@@ -3,4 +3,10 @@
   flex-direction: column;
   justify-content: start;
   align-items: start;
+
+  position: relative;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
 }
