--- a/src/page/main/Image-carousel/ImageIndicator/_ImageMoveTo.scss
+++ b/src/page/main/Image-carousel/ImageIndicator/_ImageMoveTo.scss
@@ -4,19 +4,18 @@
   justify-content: space-between;
   align-items: center;
 
-  width: 100%;
-  // height: 50%;
+  width: 100vw;
 
-  position: relative;
+  position: absolute;
   top: 35%;
 
   div {
     font-size: 5rem;
     background-color: rgba(177, 177, 177, 0.7);
     color: #fff;
-    // height: 50%;
+    
     padding: 5px 15px;
-    border-radius: 15px;
+    border-radius: 25px;
 
     &:nth-child(1) {
       margin-left: 5%;
