--- a/src/page/main/Image-carousel/ImageIndicator/_ImagesIndicator.scss
+++ b/src/page/main/Image-carousel/ImageIndicator/_ImagesIndicator.scss
@@ -6,19 +6,22 @@
   justify-content: center;
   align-items: center;
 
-  width: 35%;
+  max-width: 35%;
+
   background-color: rgba(177, 177, 177, 0.7);
   padding: 5px 15px;
   border-radius: 15px;
 
   position: relative;
   margin: 0 auto;
-  top: 75%;
+  top: 90%;
 
   div {
     background-color: #ddd;
     width: 15px;
+    min-width: 15px;
     height: 15px;
+    min-height: 15px;
     border-radius: 50%;
 
     margin-right: 10px;
