feat: Add Sticky Nav determined by scroll position

--- a/src/common/_ColorScheme.scss
+++ b/src/common/_ColorScheme.scss
@@ -9,7 +9,7 @@ $color-warning: #ffa640;
 $color-danger: #ff3232;
 
 // nav
-$color-nav: #97e0d9;
+$color-nav: rgba(151, 224, 217, 0.7);
 $color-footer: #535353;
 
 // keyword
