--- a/src/page/main/_Main.scss
+++ b/src/page/main/_Main.scss
@@ -3,10 +3,11 @@
   flex-direction: column;
   justify-content: start;
   align-items: start;
+  overflow-y: auto;
 
   position: relative;
   left: 0;
   right: 0;
   width: 100%;
-  height: 100vh;
+  height: 300vh;
 }
