--- a/src/page/main/Image-carousel/_ImageCarousel.scss
+++ b/src/page/main/Image-carousel/_ImageCarousel.scss
@@ -1,18 +1,19 @@
 .imageCarousel {
-  position: relative;  
+  position: relative;
   height: 100vh;
   overflow-y: auto;
   overflow-x: hidden;
-  
+
   &-imagePlacer {
     display: flex;
-    // flex-direction: row;
     height: 100%;
+    // transform: translate 0.5s ease-in-out;
+    overflow: hidden;
 
     & .imageCarousel--image {
-      width: auto;
+      width: 100%;
       min-width: 100vw;
-      // height:
+      overflow: hidden;
     }
   }
 
