--- a/src/page/main/Search/_Search.scss
+++ b/src/page/main/Search/_Search.scss
@@ -1,5 +1,6 @@
 .search {
-  height: 100%;
-  width: 100%;
-  position: inherit;
+  // height: 100%;
+  // width: 100%;
+  // position: relative;
+  // margin: 0 auto;
 }
