--- a/src/page/main/Search/Search-elements/_SearchBar.scss
+++ b/src/page/main/Search/Search-elements/_SearchBar.scss
@@ -1,7 +1,9 @@
+@import "../../../../common/BoxShadow";
+
 .searchBarPlacer {
   height: 100%;
 
-  .inputContents {
+  .searchBar-contents {
     position: relative;
 
     width: 400px;
@@ -10,6 +12,8 @@
     border: 1px dashed #b2b2b2;
     border-radius: 15px;
 
+    @include make-box-shadow(1, 1, 1);
+    
     // transition: width 1s ease-in-out, height 1s ease-in-out;
 
     i {
@@ -18,7 +22,7 @@
       top: 5%;
     }
 
-    .searchBar {
+    .searchBar--input {
       position: absolute;
       left: 50px;
       top: 0;
@@ -27,10 +31,34 @@
       height: 50px;
       border: 0;
       border-radius: 15px;
+      background-color: transparent;
+    }
+
+    .searchBar--btn {
+      position: absolute;
+      left: 70%;
+      top: 30%;
+    }
+
+    .searchBar--separator {
+      position: absolute;
+      top: 50%;
+
+      width: 95%;
+      height: 1px;
+
+      margin: 10px 5px;
+      border-bottom: 1px dashed #000;
+    }
+
+    .searchBar--clearBtn {
+      position: absolute;
+      left: 70%;
+      top: 75%;
     }
   }
 
-  .searchBar--btn {
+  .searchBar-toggle {
     position: relative;
     left: 0;
     top: 0;
@@ -42,6 +70,8 @@
 
     border: 0.7px dashed rgba(150, 150, 150, 0.6);
     border-radius: 15px;
+
+    @include make-box-shadow(1, 1, 1);
 
     &.active {
       display: none;
