--- a/src/page/main/Search/_Search.scss
+++ b/src/page/main/Search/_Search.scss
@@ -1,6 +1,11 @@
 .search {
-  // height: 100%;
-  // width: 100%;
+  height: 100%;
+  width: 100%;
   // position: relative;
   // margin: 0 auto;
+
+  display: flex;
+  justify-content: center;
+  
+  margin-top: 25%;
 }
