--- a/src/page/main/Search/Search-elements/_SearchBar.scss
+++ b/src/page/main/Search/Search-elements/_SearchBar.scss
@@ -1,80 +1,66 @@
-@import "../../../../common/BoxShadow";
+@import "../../../../../common/BoxShadow";
 
-.searchBarPlacer {
-  height: 100%;
+.searchBar-contents {
+  position: relative;
 
-  .searchBar-contents {
-    position: relative;
+  width: 400px;
+  height: 200px;
 
-    width: 400px;
-    height: 200px;
+  border: 1px dashed #b2b2b2;
+  border-radius: 15px;
 
-    border: 1px dashed #b2b2b2;
+  @include make-box-shadow(1, 1, 1);
+
+  // transition: width 1s ease-in-out, height 1s ease-in-out;
+
+  i {
+    position: absolute;
+    left: 5px;
+    top: 5%;
+  }
+
+  p {
+    position: absolute;
+    left: 5px;
+    top: 60%;
+  }
+
+  .searchBar--input {
+    position: absolute;
+    left: 50px;
+    top: 0;
+
+    width: 350px;
+    height: 50px;
+    border: 0;
     border-radius: 15px;
+    background-color: transparent;
 
-    @include make-box-shadow(1, 1, 1);
-    
-    // transition: width 1s ease-in-out, height 1s ease-in-out;
-
-    i {
-      position: absolute;
-      left: 5px;
-      top: 5%;
-    }
-
-    .searchBar--input {
-      position: absolute;
-      left: 50px;
-      top: 0;
-
-      width: 350px;
-      height: 50px;
-      border: 0;
-      border-radius: 15px;
-      background-color: transparent;
-    }
-
-    .searchBar--btn {
-      position: absolute;
-      left: 70%;
-      top: 30%;
-    }
-
-    .searchBar--separator {
-      position: absolute;
-      top: 50%;
-
-      width: 95%;
-      height: 1px;
-
-      margin: 10px 5px;
-      border-bottom: 1px dashed #000;
-    }
-
-    .searchBar--clearBtn {
-      position: absolute;
-      left: 70%;
-      top: 75%;
+    &:focus {
+      outline: none;
     }
   }
 
-  .searchBar-toggle {
-    position: relative;
-    left: 0;
-    top: 0;
+  .searchBar--btn {
+    position: absolute;
+    left: 70%;
+    top: 30%;
+  }
 
-    width: 50px;
-    height: 50px;
+  .searchBar--separator {
+    position: absolute;
+    top: 50%;
 
-    background-color: #fff;
+    width: 95%;
+    height: 1px;
 
-    border: 0.7px dashed rgba(150, 150, 150, 0.6);
-    border-radius: 15px;
+    margin: 10px 5px;
+    border-bottom: 1px dashed #000;
+  }
 
-    @include make-box-shadow(1, 1, 1);
-
-    &.active {
-      display: none;
-    }
+  .searchBar--clearBtn {
+    position: absolute;
+    left: 70%;
+    top: 75%;
   }
 }
