--- a/src/page/main/Search/_Search.scss
+++ b/src/page/main/Search/_Search.scss
@@ -1,11 +1,11 @@
 .search {
   height: 100%;
   width: 100%;
-  // position: relative;
-  // margin: 0 auto;
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  
+  align-items: center;
+
   margin-top: 25%;
 }
