--- a/src/page/main/Search/Search-elements/_SearchCtrl.scss
+++ b/src/page/main/Search/Search-elements/_SearchCtrl.scss
@@ -1,8 +1,9 @@
-@import "../../../../../common/BoxShadow";
+// @import "../../../../../common/BoxShadow";
+@import "../../../../common/ColorScheme";
 
-.searchCtrl {
+// .searchCtrl {
   
-}
+// }
 
 .searchBar-toggle {
     position: relative;
@@ -17,7 +18,8 @@
     border: 0.7px dashed rgba(150, 150, 150, 0.6);
     border-radius: 15px;
 
-    @include make-box-shadow(1, 1, 1);
+    // @include make-box-shadow(1, 1, 1);
+    box-shadow: 1px 1px 1px 1px $color-box-shadow;
 
     &.active {
       display: none;
