--- a/src/page/main/Search/_Search.scss
+++ b/src/page/main/Search/_Search.scss
@@ -1,5 +1,4 @@
-.search {
-  height: 100%;
+.search {  
   width: 100%;
 
   display: flex;
@@ -7,5 +6,5 @@
   justify-content: center;
   align-items: center;
 
-  margin-top: 25%;
+  // margin-top: 5%;
 }
