--- a/src/page/main/Image-carousel/_ImageCarousel.scss
+++ b/src/page/main/Image-carousel/_ImageCarousel.scss
@@ -1,20 +1,29 @@
 .imageCarousel {
   position: relative;
-  height: 100vh;
   overflow-y: auto;
   overflow-x: hidden;
+  height: 40%;
+  width: 100%;
+  transform: translate 0.5s ease-in-out;
 
   &-imagePlacer {
     display: flex;
+    flex-direction: row;
 
-    height: 100%;
-    // transform: translate 0.5s ease-in-out;
-    overflow: hidden;
+    width: 70%;
+    margin: 0 auto;
+    height: 60%;
+
+    margin-top: 5%;
 
     & .imageCarousel--image {
       width: 100%;
-      min-width: 100vw;
-      overflow: hidden;
+      min-width: 100%;
+      height: 100%;
+      visibility: visible;
+      &.hidden {
+        visibility: hidden;
+      }
     }
   }
 
