--- a/src/page/main/Search/Search-elements/_SearchCtrl.scss
+++ b/src/page/main/Search/Search-elements/_SearchCtrl.scss
@@ -1,11 +1,11 @@
 @import "../../../../common/BoxShadow";
 // @import "../../../../common/ColorScheme";
 
-// .searchCtrl {
+.searchCtrl {
+  // height: 350px;
+}
 
-// }
-
-.searchBar-toggle {
+.searchBar-toggle {  
   position: relative;
   left: 0;
   top: 0;
