--- a/src/page/main/Image-carousel/_ImageCarousel.scss
+++ b/src/page/main/Image-carousel/_ImageCarousel.scss
@@ -1,10 +1,9 @@
 .imageCarousel {
-  position: relative;
-  overflow-y: auto;
+  position: relative;  // overflow-y: auto;
   overflow-x: hidden;
-  height: 40%;
-  width: 100%;
-  transform: translate 0.5s ease-in-out;
+  height: 23%;
+  box-sizing: border-box;
+  // margin-bottom: 15%;
 
   &-imagePlacer {
     display: flex;
@@ -12,16 +11,16 @@
 
     width: 70%;
     margin: 0 auto;
-    height: 60%;
+    height: 80%;
 
-    margin-top: 5%;
+    margin-top: 2%;    
 
     & .imageCarousel--image {
       width: 100%;
       min-width: 100%;
       height: 100%;
       visibility: visible;
-      
+
       &.hidden {
         visibility: hidden;
       }
