feat: Add fetching lectures & data verificed (about 820 lectures)

--- a/src/page/main/Image-carousel/_ImageCarousel.scss
+++ b/src/page/main/Image-carousel/_ImageCarousel.scss
@@ -1,7 +1,7 @@
 .imageCarousel {
   position: relative;  // overflow-y: auto;
   overflow-x: hidden;
-  height: 23%;
+  height: 80vh;
   box-sizing: border-box;
   // margin-bottom: 15%;
 
