--- a/src/page/main/Image-carousel/Image-carousel-elements/_ImagesIndicator.scss
+++ b/src/page/main/Image-carousel/Image-carousel-elements/_ImagesIndicator.scss
@@ -23,13 +23,14 @@
     min-width: 15px;
     height: 15px;
     min-height: 15px;
+    
     border-radius: 50%;
 
     margin-right: 10px;
 
-    &:last-child {
-      margin-right: 0;
-    }
+    // &:last-child {
+    //   margin-right: 0;
+    // }
 
     &.highlight {
       background-color: $color-primary;
