--- a/src/component/button/_Button.scss
+++ b/src/component/button/_Button.scss
@@ -36,6 +36,13 @@
   /*
   * by size
   */
+  &-xsmall {
+    @include make-btn() {
+      width: 80px;
+      height: 20px;
+    }
+  }
+
   &-small {
     @include make-btn() {
       width: 100px;
