--- a/src/page/main/Search/Search-elements/search-bar/_SearchBar.scss
+++ b/src/page/main/Search/Search-elements/search-bar/_SearchBar.scss
@@ -5,7 +5,7 @@
   position: relative;
 
   width: 750px;
-  height: 350px;
+  height: 400px;
 
   border: 2px dashed #000;
   border-radius: 15px;
@@ -18,10 +18,10 @@
     top: 5%;
   }
 
-  p {
+  .searchBar--selectedKeywords-placeholder {
     position: absolute;
     left: 5%;
-    top: 60%;
+    top: 63%;
   }
 
   .searchBar--input {
@@ -40,24 +40,39 @@
     }
   }
 
-  .searchBar--btn {
+  .searchBar--btn-add {
     position: absolute;
     left: 83%;
-    top: 30%;
+    top: 35%;
+  }
+
+  .searchBar--btn-search {
+    position: absolute;
+    left: 83%;
+    top: 45%;
   }
 
   .searchBar--suggestions {
     position: absolute;
     left: 5%;
-    top: 15%;
+    top: 15%;    
+
+    box-sizing: border-box;
 
     display: flex;
     flex-wrap: wrap;
+    justify-content: start;
+    align-items:flex-start;
+
+    width: 77%;
+    height: 43%;
+    overflow-y: hidden;
+
     list-style-type: none;
 
     li {
-      background-color: $color-primary;
-      color: rgb(0, 0, 0);
+      background-color: $color-selected;
+      color: #fff;
 
       border: 1px solid #000;
       border-radius: 15px;
@@ -70,15 +85,22 @@
   .searchBar--selected {
     position: absolute;
     left: 5%;
-    top: 70%;
+    top: 72%;
 
     display: flex;
     flex-wrap: wrap;
+    justify-content: start;
+    align-items:flex-start;
+
+    width: 77%;
+    height: 28%;
+    overflow-y: hidden;
+
     list-style-type: none;
 
     li {
-      background-color: $color-primary;
-      color: rgb(0, 0, 0);
+      background-color: $color-selected;
+      color: #fff;
 
       border: 1px solid #000;
       border-radius: 15px;
@@ -91,18 +113,18 @@
   .searchBar--separator {
     position: absolute;
     left: 2%;
-    top: 50%;
+    top: 57%;
 
     width: 95%;
     height: 1px;
 
-    margin: 10px 5px;
+    margin: 5px 5px;
     border-bottom: 1px dashed #000;
   }
 
   .searchBar--clearBtn {
     position: absolute;
     left: 83%;
-    top: 75%;
+    top: 87%;
   }
 }
