--- a/src/page/main/Search/Keyword-selector/_KeywordSelector.scss
+++ b/src/page/main/Search/Keyword-selector/_KeywordSelector.scss
@@ -1,4 +1,3 @@
-// @import "../../../common/ColorScheme";
 @import "../../../../common/ColorScheme";
 
 .keywordSelector {
@@ -42,7 +41,7 @@
         display: inline-block;
 
         background-color: $color-not-selected;
-        color: rgb(0, 0, 0);
+        color: #fff;
 
         border: 1px solid #000;
         border-radius: 15px;
