feat: Add keywords colors

--- a/src/page/main/Search/Keyword-selector/_KeywordSelector.scss
+++ b/src/page/main/Search/Keyword-selector/_KeywordSelector.scss
@@ -34,6 +34,18 @@
       display: inline-flex;
       flex-wrap: wrap;
 
+      .platforms {
+        &.active {
+          background-color: $color-warning;
+        }
+      }
+
+      .keywords {
+        &.active {
+          background-color: $color-selected;
+        }
+      }
+
       li {
         list-style-type: none;
         overflow: hidden;
