--- a/src/page/main/Search/_Search.scss
+++ b/src/page/main/Search/_Search.scss
@@ -1,9 +1,17 @@
-.search {  
+.search {
   width: 100%;
   height: 100%;
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;  
+  align-items: center;
+
+  position: relative;
+
+  &--menu {
+    transform: scale(1.8);
+    position: fixed;
+    left: 95%;
+    top: 70%;
+  }
 }
