--- a/src/component/menu/menu-bar/_MenuBar.scss
+++ b/src/component/menu/menu-bar/_MenuBar.scss
@@ -7,9 +7,12 @@
   align-items: center;
   width: 50px;
 
+  margin-bottom: 15px;
+
   border-radius: 15px;
   background-color: #eee;
   opacity: 0;
+  visibility: hidden;
 
   & i {
     padding: 3px;
@@ -51,6 +54,7 @@
 
   100% {
     opacity: 1;
+    visibility: visible;
   }
 }
 
@@ -61,6 +65,6 @@
 
   100% {
     opacity: 0;
-    display: none;
+    visibility: hidden;
   }
 }
