--- a/src/page/main/_Main.scss
+++ b/src/page/main/_Main.scss
@@ -3,8 +3,10 @@
   flex-direction: column;
   justify-content: start;
   align-items: start;
-  
+
   overflow-y: auto;
-  
+
   height: 250vh;
+
+  position: relative;
 }
