refactor: Restructure file, folders

--- a/src/page/main/Search/search-bar/buttons/_SearchBarButton.scss
+++ b/src/page/main/Search/search-bar/buttons/_SearchBarButton.scss
@@ -1,5 +1,5 @@
-@import "../../../../../../common/BoxShadow";
-@import "../../../../../../common/ColorScheme";
+@import "../../../../../common/BoxShadow";
+@import "../../../../../common/ColorScheme";
 
 .searchBar {
   .searchBar--btn-add {
