--- a/src/page/main/Search/search-bar/_SearchBar.scss
+++ b/src/page/main/Search/search-bar/_SearchBar.scss
@@ -1,5 +1,5 @@
-@import "../../../../../common/BoxShadow";
-@import "../../../../../common/ColorScheme";
+@import "../../../../common/BoxShadow";
+@import "../../../../common/ColorScheme";
 
 .searchBar {
   position: relative;
