feat: Add bookmark, &-async redux

--- a/src/page/main/search-result/_SearchResultSummary.scss
+++ b/src/page/main/search-result/_SearchResultSummary.scss
@@ -4,6 +4,7 @@
   &-summary {
     width: 500px;
     padding: 10px 20px;
+    margin-left: 200px;
     border: 2px dashed #000;
     border-radius: 25px;
 
