feat: Add basic lecture card elements structure, Add required icons

--- a/src/component/lecture-card/_LectureCard.scss
+++ b/src/component/lecture-card/_LectureCard.scss
@@ -1,3 +1,11 @@
-.lectureCard {
+.lectureCard-grid {
+  padding: 15px 25px;
 
+  border: 1px dashed #000;
+  border-radius: 25px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+
+  // width: 250px;
+  
 }
