--- a/src/component/lecture-card/_LectureCard.scss
+++ b/src/component/lecture-card/_LectureCard.scss
@@ -2,10 +2,50 @@
   padding: 15px 25px;
 
   border: 1px dashed #000;
-  border-radius: 25px;
-  margin-right: 30px;
-  margin-bottom: 30px;
 
-  // width: 250px;
-  
+  width: 450px;
+  height: 500px;
+  // margin-right: 30px;
+  margin-bottom: 50px;
+  // padding-bottom: 50px;
+
+  font-size: 1.5rem;
+
+  background-color: rgba(133, 133, 133, 0.1);
+
+  // .lectureCard-gird-desc {
+  //   display:flex;
+  //   justify-content: center;
+
+  // }
+
+  .lectureCard-grid--first-row {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .lectureCard-grid--cl1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    margin-right: 10px;
+  }
+
+  .lectureCard-grid--cl2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    margin-right: 10px;
+  }
+
+  .lectureCard-grid--cl3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .lectureCard-grid--second-row {
+  }
 }
