--- a/src/component/lecture-card/lecture-card-element/title/_LectureTitle.scss
+++ b/src/component/lecture-card/lecture-card-element/title/_LectureTitle.scss
@@ -1,3 +1,10 @@
 .lectureCard--title {
-  
+  // width: 70%;
+  height: 23%;
+  margin: 0;
+
+  font-size: 1.8rem;
+  word-wrap: break-word;
+
+  // margin-bottom: 10px;
 }
