--- a/src/page/main/search-result/view/_GridView.scss
+++ b/src/page/main/search-result/view/_GridView.scss
@@ -2,11 +2,14 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  // width: 805;
+
+  justify-content: space-around;
 
   padding: 15px 25px;
+  margin-top: 5%;
 
   border: 2px dashed #000;
-  border-radius: 25px;
 
   list-style-type: none;
 }
