feat: Add Pagenation component

--- a/src/page/main/search-result/view/_GridView.scss
+++ b/src/page/main/search-result/view/_GridView.scss
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  // width: 805;
+  // width: 95%;
 
   justify-content: space-around;
 
-  padding: 15px 25px;
+  padding: 15px 15px;
   margin-top: 5%;
 
   border: 2px dashed #000;
