--- a/src/common/_ColorScheme.scss
+++ b/src/common/_ColorScheme.scss
@@ -10,6 +10,7 @@ $color-danger: #ff3232;
 
 // nav
 $color-nav: rgba(151, 224, 217, 0.7);
+$color-nav-weak: rgba(197, 238, 234, 0.7);
 $color-footer: #535353;
 
 // keyword
