--- a/src/component/lecture-card/_LectureCard.scss
+++ b/src/component/lecture-card/_LectureCard.scss
@@ -1,51 +1,45 @@
+@import "../../common/ColorScheme";
+
 .lectureCard-grid {
-  padding: 15px 25px;
+  box-sizing: border-box;
+  padding: 5px 10px;
 
   border: 1px dashed #000;
+  border-radius: 5px;
 
-  width: 450px;
-  height: 500px;
-  // margin-right: 30px;
-  margin-bottom: 50px;
-  // padding-bottom: 50px;
+  width: 400px;
+  height: auto;
+  margin: 10px 0;
 
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 
-  background-color: rgba(133, 133, 133, 0.1);
+  background-color: $color-nav-weak;
 
-  // .lectureCard-gird-desc {
-  //   display:flex;
-  //   justify-content: center;
-
-  // }
+  .lectureCard-gird-desc {
+    min-height: 45%;
+    // max-height: 45%;
+  }
 
   .lectureCard-grid--first-row {
     display: flex;
     flex-direction: row;
+    justify-content: center;
   }
 
-  .lectureCard-grid--cl1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
-    margin-right: 10px;
-  }
-
-  .lectureCard-grid--cl2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
-    margin-right: 10px;
-  }
-
+  .lectureCard-grid--cl1,
+  .lectureCard-grid--cl2,
   .lectureCard-grid--cl3 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+
+    margin-right: 10px;
+
+    div {
+      margin-bottom: 5px;
+    }
   }
 
-  .lectureCard-grid--second-row {
-  }
+  // .lectureCard-grid--second-row {
+  // }
 }
