--- a/src/component/lecture-card/lecture-card-element/thumbnail/_LectureThumbnail.scss
+++ b/src/component/lecture-card/lecture-card-element/thumbnail/_LectureThumbnail.scss
@@ -1,5 +1,7 @@
 .lectureCard--thumbnail {
   width: 100%;
-  border-radius: 15px;  
+  height: 50%;  
+
+  border-radius: 15px;
   margin-bottom: 25px;
 }
