--- a/src/page/main/Image-carousel/_ImageCarousel.scss
+++ b/src/page/main/Image-carousel/_ImageCarousel.scss
@@ -1,7 +1,7 @@
 .imageCarousel {
   position: relative;
   overflow-x: hidden;
-  height: 100vh;
+  // height: 300vh;
 
   &-imagePlacer {
     display: flex;
