--- a/src/page/main/search-result/view/_GridView.scss
+++ b/src/page/main/search-result/view/_GridView.scss
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  // width: 95%;
-
+  flex-basis: 80%;
   justify-content: space-around;
+  // align-items: center;
+
+  height: 100%;
 
   padding: 15px 15px;
   margin-top: 5%;
