--- a/src/component/lecture-card/_LectureCard.scss
+++ b/src/component/lecture-card/_LectureCard.scss
@@ -8,7 +8,7 @@
   border-radius: 5px;
 
   width: 400px;
-  height: auto;
+  height: 450px;
   margin: 10px 0;
 
   font-size: 1.3rem;
@@ -16,8 +16,8 @@
   background-color: $color-nav-weak;
 
   .lectureCard-gird-desc {
-    min-height: 45%;
-    // max-height: 45%;
+    min-height: 25%;
+    // max-height: 25%;
   }
 
   .lectureCard-grid--first-row {
@@ -36,7 +36,7 @@
     margin-right: 10px;
 
     div {
-      margin-bottom: 5px;
+      // margin-bottom: 5px;
     }
   }
 
