--- a/src/component/menu/_Menu.scss
+++ b/src/component/menu/_Menu.scss
@@ -4,7 +4,7 @@
   transform: scale(1.5);
   position: fixed;
   left: 96%;
-  top: 75%;
+  top: 65vh;
 
   display: flex;
   flex-direction: column;
