feat: Add lecture popup

--- a/src/component/lecture-popup/_LecturePopup.scss
+++ b/src/component/lecture-popup/_LecturePopup.scss
@@ -5,6 +5,8 @@
   top: 50%;
   transform: translate(-50%, -50%);
 
+  box-sizing: border-box;
+
   width: 80%;
   height: 80%;
 
@@ -14,5 +16,9 @@
 
   .lecturePopup--lecture {
     overflow-y: scroll;
+    box-sizing: border-box;
+    padding: 2% 5%;    
+
+    height: 100%;
   }
 }
