--- a/src/component/lecture-card/_LectureCard.scss
+++ b/src/component/lecture-card/_LectureCard.scss
@@ -15,9 +15,27 @@
 
   background-color: $color-nav-weak;
 
-  .lectureCard-gird-desc {
-    min-height: 25%;
+  .lecturePopup-close {
+    position: absolute;
+    left: 95%;
+    top: -2%;
+    background-color: rgba(155, 155, 155, 0.8);
+    padding: 10px 15px;
+    border: 1px solid;
+    border-radius: 30%;
+  }
+
+  .lectureCard-grid-desc {
+    // min-height: 25%;
     // max-height: 25%;
+    width: inherit;
+  }
+
+  .lectureCard-separator {
+    width: 100%;
+    height: 1px;
+    margin: 3% auto;
+    background-color: #000;
   }
 
   .lectureCard-grid--first-row {
