--- a/src/component/lecture-card/lecture-card-element/title/_LectureTitle.scss
+++ b/src/component/lecture-card/lecture-card-element/title/_LectureTitle.scss
@@ -8,3 +8,13 @@
 
   // margin-bottom: 10px;
 }
+
+.lecturePopup--title {
+  height: 18%;
+  margin: 5% 0;
+
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-align: center;
+  word-wrap: break-word;
+}
