feat: Fix 검색 결과 요약 갯수 추가

--- a/src/page/main/search-result/_SearchResultSummary.scss
+++ b/src/page/main/search-result/_SearchResultSummary.scss
@@ -32,5 +32,9 @@
     &--keyword {
       background-color: $color-selected;
     }
+
+    &--lectures-count {
+      font-size: 2rem;
+    }
   }
 }
