feat: Add signIn API communication ( need to resolve CORS )

--- a/src/page/comments/_Comments.scss
+++ b/src/page/comments/_Comments.scss
@@ -1,3 +1,14 @@
 .comments {
-  
+  display: flex;
+  flex-direction: column;
+
+  justify-content: start;
+  align-items: start;
+
+  overflow-y: auto;
+  overflow-x: hidden;
+
+  height: 100%;
+
+  position: relative;
 }
