--- a/src/component/comment/comment-element/createdAt/_CommentCreatedAt.scss
+++ b/src/component/comment/comment-element/createdAt/_CommentCreatedAt.scss
@@ -1,4 +1,10 @@
 .comment--created-at {
+  font-size: 1rem;
+  word-wrap: break-word;
+  text-align: center;
+  text-transform: uppercase;
+  position: absolute;
 
-  
+  left: 80%;
+  top: 62%;
 }
