--- a/src/component/lecture-card/lecture-card-element/title/_LectureTitle.scss
+++ b/src/component/lecture-card/lecture-card-element/title/_LectureTitle.scss
@@ -1,16 +1,12 @@
-.lectureCard--title {
-  // width: 70%;
-  height: 18%;
-  margin: 0;
+.lectureCard--title {  
+  margin: 15px 0;
 
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   word-wrap: break-word;
-
-  // margin-bottom: 10px;
 }
 
 .lecturePopup--title {
-  height: 18%;
+  height: 20%;
   margin: 5% 0;
 
   font-size: 2.5rem;
