refactor: Separate files

--- a/src/page/main/carousel/carousel-indicator/_CarouselIndicator.scss
+++ b/src/page/main/carousel/carousel-indicator/_CarouselIndicator.scss
@@ -1,6 +1,6 @@
-@import "../../../common/ColorScheme";
+@import "../../../../common/ColorScheme";
 
-.imagesIndicator {
+.carousel--Indicator {
   display: flex;
   flex-direction: row;
   justify-content: center;
