feat: add Sync bookmark icon and Fix error

--- a/src/component/menu/_Menu.scss
+++ b/src/component/menu/_Menu.scss
@@ -4,7 +4,7 @@
   transform: scale(1.5);
   position: fixed;
   left: 96%;
-  top: 73.2vh;
+  top: 68%;
 
   display: flex;
   flex-direction: column;
