feat: Add dark mode basic

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,5 +2,10 @@
   width: 100vw;
   height: 100vh;
   position: relative;
-  // display: flex;
+
+  background-color: #fff;
+
+  &.dark {
+    background-color: #000;
+  }
 }
