--- a/src/component/lecture-card/lecture-card-element/thumbnail/_LectureThumbnail.scss
+++ b/src/component/lecture-card/lecture-card-element/thumbnail/_LectureThumbnail.scss
@@ -1,16 +1,20 @@
 .lectureCard--thumbnail {
-  display: block;
+  position: relative;
+  left: 10%;
 
-  width: 100%;
-  height: 50%;
+  max-width: 80%;
+  max-height: 80%;
 
   border-radius: 15px;
-  margin-bottom: 25px;
+  margin-bottom: 25px;  
 }
 
 .lecturePopup--thumbnail {
   display: block;
 
-  border-radius: 15px;  
+  border-radius: 15px;
   margin: 8% auto;
+
+  max-width: 80%;
+  max-height: 80%;
 }
